<resources>
    <string name="app_name_actionbar">Asistant Auto Selling</string>
    <string name="app_name">AAS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="text_login">Login</string>
    <string name="text_log_out">Log out</string>
    <string name="text_cart">My cart</string>
    <string name="text_favorite">Add new product</string>
    <string name="text_manage">Management</string>
    <string name="text_home">Home</string>

    <string name="facebook_app_id">146228389349235</string>
    <string name="fb_login_protocol_scheme">fb146228389349235</string>


    <string name="firebase_error_login">Authencation Failed! Try Again.</string>
</resources>
